// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gate component should contain all components 1`] = `
<div
  className="gate well well-sm"
>
  <div>
    <b>
      environment
    </b>
  </div>
  <div>
    <span
      className="text-success glyphicon glyphicon-chevron-right"
    />
    <button
      className="btn btn-success"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      Open
    </button>
    <span
      className="text-success glyphicon glyphicon-chevron-right"
    />
    <div
      className="auto-state-button-div"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <button
        className="auto-state-button btn btn-success"
        disabled={true}
        type="button"
      >
        Open
      </button>
    </div>
    <span
      className="text-success glyphicon glyphicon-chevron-right"
    />
  </div>
  <div>
    <div
      className="comment "
    >
      comment 1
      <a
        className="glyp-button"
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-pencil"
        />
      </a>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className=""
      >
        ticket 1
        <a
          className="glyp-button"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-trash"
          />
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className=""
      >
        ticket 2
        <a
          className="glyp-button"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-trash"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`load from state should load the state correctly 1`] = `
<div
  className="gate well well-sm"
>
  <div>
    <b>
      test
    </b>
  </div>
  <div>
    <span
      className="text-danger glyphicon glyphicon-chevron-right"
    />
    <button
      className="btn btn-danger"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      Closed
    </button>
    <span
      className="text-danger glyphicon glyphicon-chevron-right"
    />
    <div
      className="auto-state-button-div"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <button
        className="auto-state-button btn btn-success"
        disabled={true}
        type="button"
      >
        Open
      </button>
    </div>
    <span
      className="text-danger glyphicon glyphicon-chevron-right"
    />
  </div>
  <div
    className="default-comment"
  >
    now
  </div>
  <div>
    <div
      className="comment "
    >
      some comment
      <a
        className="glyp-button"
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-pencil"
        />
      </a>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className=""
      >
        ticket 1
        <a
          className="glyp-button"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-trash"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
